--- a/templates/dayview.html
+++ b/templates/dayview.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LimeTable</title>
     <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="/static/css/extra.css">
 </head>
 <body>
     <a href="/vp/dashboard"><button>Zur Übersicht.</button></a>
