--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <title>LimeTable</title>
 </head>
 <body>
-    <a href="/vp/schuelogin">Schüler Login</a>
-    <a href="/vp/lehrerlogin">Lehrer Login</a>
+    <a href="/vp/schuelogin">Schülerlogin</a>
+    <a href="/vp/lehrerlogin">Lehrerlogin</a>
 </body>
 </html>
